# GrooveMat

./: .gitignore  README.md  checkpoint.pth.tar  generate_data.py  main.py  predict.py  pyproject.toml  setup.cfg  test_m3gnet.py  test_results.csv
data/: id_prop.csv
data/structures/: id_prop.csv
results/: test_results.csv
scripts/: evaluate.py  generate_data.py  predict.py  summarize_errors.py  summary.csv  test_atom_errors.csv  test_m3gnet.py  test_predict.py  test_results.csv
src/disco/: __init__.py  __main__.py  cli.py  data.py  m3gnet_loss.py  matgl_loss.py  model.py
src/disco.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/disco/utils/: normalizer.py
src/groovemat/: data.py  main.py
src/groovemat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/groovemat/scripts/: predict.py  test_m3gnet.py
tests/pretrained_models/: model_best.pth.tar
tests/results/: summary.csv  test_atom_errors.csv  test_results.csv  test_results_(1).csv
