[build-system]
requires      = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "disco"
version     = "0.0.1"
description = "Move Your Atoms into Place!"
readme      = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"

authors = [
  { name = "Isaac Perez",  email = "iperez@g.hmc.edu" },
  { name = "Thomas Wing" }
]

license     = { text = "MIT" }

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics"
]

dependencies = [
  "ase",
  "torch>=2.0",
  "torch_geometric>=2.4",
  "numpy"
]

[project.optional-dependencies]
dev = [
  "black>=22.3"
]

[project.urls]
Homepage = "https://github.com/isaac-perez7053/disco"

[project.scripts]
disco = "disco.__main__:main"

# Tell setuptools where the source tree lives  (PEP 420)
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

