[metadata]
name = groovemat
version = 0.0.1
author = Isaac Perez; Thomas Wing
author_email = iperez@g.hmc.edu
description = Move Your Atoms into Place!
long_description =
    file: README.md
long_description_content_type = text/markdown
url = https://github.com/isaac-perez7053/disco
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    ase
    torch>=2.0
    torch_geometric>=2.4
    pymatgen
    mp-api
    # TODO: m3gnet

[options.packages.find]
where = src

[options.extras_require]
dev =
    black>=22.3

[options.entry_points]
console_scripts =
    disco = disco.__main__:main

[project.scripts]
disco-mp-download  = "scripts.mp_download:main"
disco-cod-download = "scripts.cod_download:main"